force-app/main/default/objects/Placement_Forecast__c/Placement_Forecast__c.object-meta.xml
<CustomObject>
    <label>Placement Forecast</label>
    <nameField>
        <label>Forecast WeekEnding Date</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Placement Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>