force-app/main/default/objects/Placement_Forecast__c/fields/Active_In_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Active_In_the_Week__c</fullName>
    <formula>IF(Default_Hours_Week__c !=0,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active In the Week?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>