force-app/main/default/objects/Placement_Forecast__c/fields/Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Bill_Rate__c</fullName>
    <label>Default Weekly Customer Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>