force-app/main/default/objects/Placement_Forecast__c/fields/Default_Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Default_Hours_Week__c</fullName>
    <label>Default Hours/Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>