force-app/main/default/objects/Placement_Forecast__c/fields/Direct_Revenue_Only__c.field-meta.xml
<CustomField>
    <fullName>Direct_Revenue_Only__c</fullName>
    <label>Direct Revenue Only</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>