force-app/main/default/objects/Placement_Forecast__c/fields/Engagement_End__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End__c</fullName>
    <label>End In this Week</label>
    <type>Date</type>
</CustomField>