force-app/main/default/objects/Placement_Forecast__c/fields/Engagement_Start__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start__c</fullName>
    <label>Start In This Week</label>
    <type>Date</type>
</CustomField>