force-app/main/default/objects/Placement_Forecast__c/fields/Latest_Hours_Diffrent__c.field-meta.xml
<CustomField>
    <fullName>Latest_Hours_Diffrent__c</fullName>
    <formula>Default_Hours_Week__c != Placement__r.Latest_Hours_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Hours Diffrent</label>
    <type>Checkbox</type>
</CustomField>