force-app/main/default/objects/Placement_Forecast__c/fields/lineItem_Count__c.field-meta.xml
<CustomField>
    <fullName>lineItem_Count__c</fullName>
    <label>lineItem Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>