force-app/main/default/objects/Placement_Forecast__c/fields/Manual_Hourly_Talent_Rate__c.field-meta.xml
<CustomField>
    <fullName>Manual_Hourly_Talent_Rate__c</fullName>
    <label>Manual Hourly Talent Rate</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>