force-app/main/default/objects/Placement_Forecast__c/fields/Manually_Forecasted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Manually_Forecasted_Hours__c</fullName>
    <label>Manually Forecasted Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>