force-app/main/default/objects/Placement_Forecast__c/fields/Manually_Updated__c.field-meta.xml
<CustomField>
    <fullName>Manually_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Updated</label>
    <type>Checkbox</type>
</CustomField>