force-app/main/default/objects/Placement_Forecast__c/fields/Month_Considering_Saturday__c.field-meta.xml
<CustomField>
    <fullName>Month_Considering_Saturday__c</fullName>
    <formula>IF(MONTH(Week_Ending_Date__c) =MONTH( Week_Start_Date__c),

DATE(YEAR( Week_Start_Date__c),MONTH( Week_Start_Date__c),1),
DATE(YEAR( Week_Ending_Date__c),MONTH(Week_Ending_Date__c),1)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Considering Saturday</label>
    <type>Date</type>
</CustomField>