force-app/main/default/objects/Placement_Forecast__c/fields/Split_Count__c.field-meta.xml
<CustomField>
    <fullName>Split_Count__c</fullName>
    <label>Split Count</label>
    <summaryForeignKey>Placement_Forecast_Split__c.Placement_Forecast__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>