force-app/main/default/objects/Placement_Forecast__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipLabel>Placement Forecasts</relationshipLabel>
    <relationshipName>Placement_Forecasts</relationshipName>
    <type>Lookup</type>
</CustomField>