force-app/main/default/objects/Placement_Forecast__c/fields/Torc_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Torc_User_ID__c</fullName>
    <formula>Placement__r.Torc_User__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Torc User ID</label>
    <type>Text</type>
</CustomField>