force-app/main/default/objects/Placement_Forecast__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <formula>Week_Ending_Date__c -6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week Start Date</label>
    <type>Date</type>
</CustomField>